# testNRFLib

./: README.md
src/: CMakeLists.txt  main.cpp  readme.md
src/CMakeScripts/: CMake_nRF5x.cmake  CMake_nRF5x_v14_2.cmake
